cloud/k8s/apps/coder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder
  namespace: coder
spec:
  selector:
    app: coder
  ports:
    - name: http
      port: 7080
      targetPort: 7080
      protocol: TCP
  type: ClusterIP
